--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
     image: redis:latest
     ports:
       - "6379:6379"
+    volumes:
+      - redis_data:/data  # <-- Persist Redis data here
 
   web:
     build: .
@@ -29,4 +31,5 @@ services:
       - redis
 
 volumes:
-  postgres_data:
+  postgres_data:   # <-- This defines named volume for Postgres
+  redis_data:      # <-- This defines named volume for Redis
